# ghostscraper

./: .gitignore  BATTLE_PLAN.md  CACHE_REFACTOR.md  CHANGELOG.md  MANIFEST.in  PUBLISHING.md  README.md  cacherator_bug_report.md  example.py  example_batch.py  example_fetch_bytes.py  example_progress.py  example_seo.py  example_simple.py  pyproject.toml  requirements.txt
.ai-docs/: beautifulsoup4.md  cacherator.md  dynamorator.md  html2text.md  logorator.md  lxml_html_clean.md  newspaper4k.md  playwright.md  publisherator.md  python-slugify.md  readmerator.md
ghostscraper/: __init__.py  config.py  ghost_scraper.py  playwright_installer.py  playwright_scraper.py  scrape_cache.py
ghostscraper/stream/: __init__.py  __main__.py  models.py  scrape_stream.py  worker.py  worker_pool.py
tests/: run_all.py  test_caching.py  test_defaults.py  test_deprecated.py  test_exports.py  test_fetch_bytes.py  test_heavy.py  test_options.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_playwright_scraper.py  test_progress.py  test_scrape_cache.py  test_scrape_cache_unit.py  test_scrape_many.py  test_single_url.py
